# cn-ai-microservices

./: .env  compose.yaml
recommendation-ai/: .env.example  Dockerfile  README.md  ai.py  index.py  pyproject.toml  pytypes.py
recommendation-ai/tests/: test_ai.py
todo-app/: .gitignore  Dockerfile  README.md  events.py  main.py  pyproject.toml
todo-app/database/: models.py
todo-ui/: Dockerfile  package-lock.json  package.json
todo-ui/app/: page.tsx
todo-ui/components/: CreateBar.tsx  RecommendedTodos.tsx  Todos.tsx
todo-ui/lib/: server.ts  utils.ts
