[tool.poetry]
name = "recommendation-ai"
version = "0.1.0"
description = ""
authors = ["Muhammad-Masood <development.masood@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.0"
uvicorn = {extras = ["standard"], version = "^0.28.0"}
sqlmodel = "^0.0.16"
httpx = "^0.27.0"
pytest = "^8.1.1"
psycopg2-binary = "^2.9.9"
groq = "^0.11.0"
kafka-python = "^2.0.2"
aiokafka = "^0.11.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"